################################################################################
#                             nxTools - Change Log                             #
################################################################################

nxTools v1.2.0 (May 5, 2008):
  NEW: New date cookie system for newdate and pre paths (check your configs!).
  CHG: Increased retry count for the SQLite busy handler.
  CHG: Updated nxHelper to v2.4.0, minor changes.
  CHG: Updated SQLite to v3.5.8.
  FIX: Dupe rebuilds ignored directories older than "dupe(CleanDirs)".
  FIX: Flush the directory cache after a lot more file operations.
  FIX: The "%W" date cookie started at "00".

nxTools v1.1.1 (Mar 22, 2008):
  NEW: Extended help information for "SITE EDITPRE HELP VIEW".
  NEW: Ignore defined file extensions when calculating the file count and size of a pre.
  CHG: Updated dupe file ignore patterns.
  FIX: Debug logging function would error when reading array variables.
  FIX: Dupe rebuilds did not append a trailing slash to virtual paths.
  FIX: Rewrote the open/close feature to workaround a bug in ioFTPD v6.x.

nxTools v1.1.0 (Feb 10, 2008):
  NEW: Dupe database format has changed; read the upgrading instructions.
  NEW: Rewrote the dupe database rebuild feature.
  NEW: The file database now includes the path for "SITE FDUPE".
  CHG: Updated SQLite to v3.5.6.
  FIX: Corrected a grammatical error in "SITE EDITPRE HELP".
  FIX: Dupe rebuilds in large directories fail because of ioFTPD's script timeout.
  FIX: Dupe rebuilds may insert an incorrect directory path.
  FIX: Dupe rebuilds were not using the logging exempts list.

nxTools v1.0.7 (Jan 6, 2008):
  CHG: Updated ignore lists to include new common directories.
  CHG: Updated SQLite to v3.5.4.
  FIX: All parent symlinks would be removed on nuke and wipe.
  FIX: Force NFO/SFV/Sample was not working properly.
  FIX: Properly terminate switches to the glob function.

nxTools v1.0.6 (Aug 20, 2007):