@@ -511,7 +511,7 @@ proc ::nxTools::Pre::Release {argList} {
 
     # Check if group is allowed to pre to the area and from this path.
     set allowPath 0; set preGroup ""
-    set virtualPath [PathResolveVirtual $target $pwd]
+    set virtualPath [PathNormalizeEx $user $group $pwd $target]
     foreach groupName $groups {
         if {[lsearch -exact $preGrps($area) $groupName] != -1} {
             set preGroup $groupName
